<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!-- "Mark Favorite", should appear as action button if possible -->

    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ref"
        android:title="@string/refresh"
        app:showAsAction="ifRoom"
        android:visible="true"/>

    <item
        android:id="@+id/action_expand"
        android:icon="@drawable/out"
        android:title="@string/expand"
        app:showAsAction="ifRoom"
        android:visible="true"/>

    <item
        android:id="@+id/action_collapse"
        android:icon="@drawable/in"
        android:title="@string/collapse"
        app:showAsAction="ifRoom"
        android:visible="false"/>


</menu>